--- a/rules.html
+++ b/rules.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Rules - Hypixel">
+  <meta name="twitter:title" content="Rules - BossSMP">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
-  <meta name="description" content="Official Minecraft server rules of Hypixel.net">
+  <meta name="description" content="Official Minecraft server rules of BossSMP">
   
   
-  <title>Rules - Hypixel</title>
+  <title>Rules - BossSMP</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -46,7 +46,7 @@
                         <img src="assets/images/512xnewhypixel.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">Hypixel.net</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">BossSMP.xyz</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -57,7 +57,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">What is Hypixel</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features13-2">What is BossSMP</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features24-4">How to join</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://forum.hypixel.net" target="_blank">Forums</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Rules</a>
                     </li></ul>
@@ -117,7 +117,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
                 <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
-                    © Copyright 2022 <strong>Hypixel</strong>. All rights reserved.<br><a href="imprint.html" class="text-primary" target="_blank">Imprint </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacy </a>| <a href="tos.html" class="text-primary" target="_blank">Terms of Service</a></p>
+                    © Copyright 2024 <strong>BossSMP</strong>. All rights reserved.<br><a href="imprint.html" class="text-primary" target="_blank">Imprint </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacy </a>| <a href="tos.html" class="text-primary" target="_blank">Terms of Service</a></p>
             </div>
             <div class="col-md-12 col-lg-6 px-4 align-right">
                 <div class="social-list">
