--- a/rules.html
+++ b/rules.html
@@ -132,7 +132,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@SkellyBD" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                         </a>
                     </div>
@@ -142,7 +142,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://discord.com" target="_blank">
+                        <a href="https://discord.gg/UtBaSQDH2j" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-discord socicon"></span>
                         </a>
                     </div>
