--- a/tos.html
+++ b/tos.html
@@ -119,7 +119,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
                 <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
-                    © Copyright 2022 <strong>BossSMP</strong>. All rights reserved.<br><a href="imprint.html" class="text-primary" target="_blank">Imprint </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacy </a>| <a href="tos.html" class="text-primary" target="_blank">Terms of Service</a></p>
+                    © Copyright 2024 <strong>BossSMP</strong>. All rights reserved.<br><a href="imprint.html" class="text-primary" target="_blank">Imprint </a>| <a href="privacy.html" class="text-primary" target="_blank">Privacy </a>| <a href="tos.html" class="text-primary" target="_blank">Terms of Service</a></p>
             </div>
             <div class="col-md-12 col-lg-6 px-4 align-right">
                 <div class="social-list">
@@ -134,7 +134,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@SkellyBD" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://discord.com" target="_blank">
+                        <a href="https://discord.gg/UtBaSQDH2j" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-discord socicon"></span>
                         </a>
                     </div>
